# SLM-ML-Scholar

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: bigram_small.json
data/: README.md
docs/: answer_artifact_format.md  answering_cli.md  architecture.md  numerical_precision.md  retrieval_cli.md  retrieval_index_format.md  roadmap.md
experiments/: __init__.py  compare_answer_methods.py  compare_retrievers.py  compare_single_and_multi_head.py  compare_tokenizers.py  evaluate_extractive_answering.py  evaluate_grounded_generation.py  grounded_answer_evaluation.py  grounded_qa_fixture.py  inspect_bpe_tokenizer.py  inspect_document_ingestion.py  inspect_multi_head_attention.py  inspect_pre_norm_decoder_block.py  inspect_single_head_attention.py  overfit_tiny_transformer.py  retrieval_fixture.py  train_bigram.py  train_mlp_xor.py  train_transformer_lm.py
tests/: conftest.py  test_activations.py  test_answering_citations_validation.py  test_answering_evaluation_cli.py  test_answering_evidence_context.py  test_answering_pipeline_serialization.py  test_answering_segmentation_generation.py  test_attention.py  test_attention_masks.py  test_bigram_gradients.py  test_bpe_tokenizer.py  test_byte_tokenizer.py  test_embedding.py  test_generation.py  test_gradient_checking.py  test_gradient_clipping.py  test_layer_norm.py  test_linear.py  test_masked_softmax.py  test_milestone1_audit.py  test_mlp_integration.py  test_multi_head_attention.py  test_multi_head_experiments.py  test_multi_head_integration.py  test_nn_module.py  test_optimizers.py  test_retrieval_chunking.py  (+20 more)
(+88 files in other folders)
